# frugalgpt

./: README.md  pyproject.toml
