[tool.poetry]
name = "<PROJECT_NAME>"
version = "0.1.0"
description = ""
authors = ["markhng525 <markhng525@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
jupyter = "1.0.0"
pandas = "1.5.3"
pydantic = "1.10.7"
torch = "1.13.1"
transformers = "4.26.1"

[tool.poetry.group.dev.dependencies]
black = "23.1.0"
isort = "5.12.0"
mypy = "1.0.0"
pre-commit = "3.2.2"
pytest = "7.3.1"
pytest-mock = "3.10.0"
ruff = "0.0.263"

[tool.isort]
profile = "black"

# https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
[tool.mypy]
plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

# https://github.com/python/mypy/issues/10632
[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[tool.ruff]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  # "I",  # isort
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
